Rename to vcdoxxer.com

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}{{ firm.name }} - VentureDox{% endblock %}
+{% block title %}{{ firm.name }} - vcdoxxer{% endblock %}
 
 {% block content %}
 <section class="profile">
