--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}VentureDox{% endblock %}</title>
+    <title>{% block title %}vcdoxxer{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
 </head>
 <body>
     <header>
-        <h1><a href="/">VentureDox.com</a><span class="byline">, by <a href="https://x.com/sudoredj" target="_blank" class="author">@sudoredj</a></span></h1>
+        <h1><a href="/">vcdoxxer.com</a><span class="byline">, by <a href="https://x.com/sudoredj" target="_blank" class="author">@sudoredj</a></span></h1>
     </header>
     <main>
         {% block content %}{% endblock %}
